--- a/main.html
+++ b/main.html
@@ -5,15 +5,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Caretta Halı Saha</title>
+
     <link rel="stylesheet" href="assets/css/bootstrap.css" />
     <link rel="stylesheet" href="assets/fonts/font.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
-    <link rel="stylesheet" href="assets/css/angular-carousel.css" />
+
     <script src="assets/js/angular.js"></script>
-    <script src="assets/js/angular-touch.js"></script>
-    <script src="assets/js/service.js"></script>
-    <script src="assets/js/iscroll.js"></script>
-    <script src="assets/js/angular-carousel.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.18/angular-ui-router.js"></script>
+    <script src="src/config.js"></script>
 
     <body>
         <div id="image">
@@ -28,7 +27,21 @@
                 <h1>Halil Ergül</h1>
                 <span>ART DIRECTOR, TASARIM</span>
             </div>
-            <div id="content" class="row">
+            <div id="content">
+                <div class="col-xs-12 text">
+                    <h2 class="title"><span>SIRADAKİ MAÇ TARİHİ</span></h2>
+                    <p class="day">24</p>
+                    <p class="month">Nis</p>
+                    <p class="year">2017</p>
+                    <div class="status">
+                        <button>KATILIM DURUMU&nbsp;DEĞİŞTİR</button>
+                        <select name="status" id="status">
+                            <option value="1">Katılıyorum</option>
+                            <option value="2">Katılmıyorum</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="status-text">KATILIYORUM</div>
                 <img src="assets/images/triangle.png" alt="">
             </div>
         </div>
