--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en" ng-app="myApp">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -9,11 +10,10 @@
     <link rel="stylesheet" href="assets/css/style.css" />
 
     <body>
-        <ui-view></ui-view>
+        <ng-view></ng-view>
     </body>
-
     <script src="assets/js/angular.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.2/angular-ui-router.min.js"></script>
+    <script src="assets/js/angular-route.js"></script>
     <script src="src/config.js"></script>
 
 </html>
