--- a/src/main/main.html
+++ b/src/main/main.html
@@ -3,6 +3,15 @@
     <img src="assets/images/main_bg.jpg" width="100%">
 </div>
 <div class="container">
+<div class="container">
+        <div id="mySidenav" class="sidenav">
+            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+            <a ng-click="Login()">Anasayfa</a>
+            <a ng-click="Main()">Maça Katılanlar</a>
+            <a href="#">Logout</a>
+        </div>
+        <div class="menubutton" onclick="openNav()"><img src="assets/images/menubutton.png"> 
+        </div>
     <div id="logo-main">
         <img src="assets/images/logo_white.png" alt="">
     </div>
