--- a/src/join/join.html
+++ b/src/join/join.html
@@ -16,7 +16,7 @@
         </div>
         <div id="user">
             <img src="assets/images/user_pic.png" alt="">
-            <h1>Halil Ergül</h1>
+            <h1>Maça Katılanlar</h1>
             <span>ART DIRECTOR, TASARIM</span>
         </div>
         <div id="content">
