--- a/src/login/login.html
+++ b/src/login/login.html
@@ -8,16 +8,16 @@
             <span>Halı Saha</span>
         </div>
         <div id="login-form" style="margin-top: 80px;">
-            <form action="" onsubmit="return false;" method="post">
+            <form action="" onsubmit="return false;">
                 <div class="form-group">
-                    <input type="username" class="form-control" id="username" placeholder="Kullanıcı Adı">
+                    <input type="username" ng-model="username" class="form-control" id="username" placeholder="Kullanıcı Adı">
                 </div>
                 <div class="form-group">
-                    <input type="password" class="form-control" id="pwd" placeholder="Parola">
+                    <input type="password" ng-model="password" class="form-control" id="pwd" placeholder="Parola">
                     <div class="checkbox col-xs-12">
                         <input type="checkbox">Beni Hatırla</label>
                     </div>
-                    <button type="submit" ng-click="Login()" class="btn-login col-xs-12">Giriş Yap</button>
+                    <button type="submit" ng-click="Login()" class="btn-login col-xs-12 login-button-action" >Giriş Yap</button>
                 </div>
             </form>
         </div>
