localstorage and login system update

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </body>
     <script src="assets/js/angular.js"></script>
     <script src="assets/js/angular-route.js"></script>
+    <script src="assets/js/ngStorage.min.js"></script>
     <script src="src/config.js"></script>
 
 </html>
