--- a/src/main/main.html
+++ b/src/main/main.html
@@ -8,7 +8,7 @@
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <a ng-click="Login()">Anasayfa</a>
             <a ng-click="Main()">Maça Katılanlar</a>
-            <a href="#">Logout</a>
+            <a ng-click="LogOut()">Logout</a>
         </div>
         <div class="menubutton" onclick="openNav()"><img src="assets/images/menubutton.png"> 
         </div>
@@ -17,7 +17,7 @@
     </div>
     <div id="user">
         <img src="assets/images/user_pic.png" alt="">
-        <h1>Halil Ergül</h1>
+        <h1>{{firstname}}</h1>
         <span>ART DIRECTOR, TASARIM</span>
     </div>
     <div id="content">
