--- a/src/login/login.html
+++ b/src/login/login.html
@@ -23,3 +23,14 @@
         </div>
     </div>
 </div>
+
+<!-- The Modal -->
+<div id="myModal" class="modal">
+
+  <!-- Modal content -->
+  <div class="modal-content">
+    <span class="close" ng-click="close()">&times;</span>
+    <p>Kullanıcı adı veya şifre hatalı</p>
+  </div>
+
+</div>
