--- a/src/main/main.html
+++ b/src/main/main.html
@@ -1,41 +1,41 @@
 <div ng-controller="MainController">
-<div id="image">
-    <img src="assets/images/main_bg.jpg" width="100%">
-</div>
-<div class="container">
-<div class="container">
-        <div id="mySidenav" class="sidenav">
-            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            <a ng-click="Login()">Anasayfa</a>
-            <a ng-click="Main()">Maça Katılanlar</a>
-            <a ng-click="LogOut()">Logout</a>
-        </div>
-        <div class="menubutton" onclick="openNav()"><img src="assets/images/menubutton.png"> 
-        </div>
-    <div id="logo-main">
-        <img src="assets/images/logo_white.png" alt="">
+    <div id="image">
+        <img src="assets/images/main_bg.jpg" width="100%">
     </div>
-    <div id="user">
-        <img src="assets/images/user_pic.png" alt="">
-        <h1>{{firstname}}</h1>
-        <span>ART DIRECTOR, TASARIM</span>
-    </div>
-    <div id="content">
-        <div class="col-xs-12 text">
-            <h2 class="title"><span>SIRADAKİ MAÇ TARİHİ</span></h2>
-            <p class="day">24</p>
-            <p class="month">Nis</p>
-            <p class="year">2017</p>
-            <div class="status">
-                <button>KATILIM DURUMU&nbsp;DEĞİŞTİR</button>
-                <select name="status" id="status">
-                    <option value="1">Katılıyorum</option>
-                    <option value="2">Katılmıyorum</option>
-                </select>
+    <div class="container">
+        <div class="container">
+            <div id="mySidenav" class="sidenav">
+                <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                <a ng-click="Login()">Anasayfa</a>
+                <a ng-click="Main()">Maça Katılanlar</a>
+                <a ng-click="LogOut()">Logout</a>
+            </div>
+            <div class="menubutton" onclick="openNav()"><img src="assets/images/menubutton.png">
+            </div>
+            <div id="logo-main">
+                <img src="assets/images/logo_white.png" alt="">
+            </div>
+            <div id="user">
+                <img src="assets/images/user_pic.png" alt="">
+                <h1>{{firstname}}</h1>
+                <span>ART DIRECTOR, TASARIM</span>
+            </div>
+            <div id="content">
+                <div class="col-xs-12 text">
+                    <h2 class="title"><span>SIRADAKİ MAÇ TARİHİ</span></h2>
+                    <p class="day">{{matchday}}</p>
+                    <p class="month">{{matchmonth}}</p>
+                    <p class="year">{{matchyear}}</p>
+                    <div class="status">
+                        <button>KATILIM DURUMU&nbsp;DEĞİŞTİR</button>
+                        <select ng-model="selectedItem" ng-change="Attending()" name="status" id="status">
+                            <option value="0">Katılmıyorum</option>
+                            <option value="1">Katılıyorum</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="status-text">{{matchattendee}}</div>
+                <img src="assets/images/triangle.png" alt="">
             </div>
         </div>
-        <div class="status-text">KATILIYORUM</div>
-        <img src="assets/images/triangle.png" alt="">
     </div>
-</div>
-</div>
