--- a/src/main/main.html
+++ b/src/main/main.html
@@ -28,14 +28,20 @@
                     <p class="year">{{matchyear}}</p>
                     <div class="status">
                         <button>KATILIM DURUMU&nbsp;DEĞİŞTİR</button>
-                        <select ng-model="selectedItem" ng-change="Attending()" name="status" id="status">
-                            <option value="0">Katılmıyorum</option>
-                            <option value="1">Katılıyorum</option>
+                        <select ng-model="selectedItem.type" ng-change="Attending()" required ng-options="option.value as option.value for option in typeOptions" name="status" id="status">
                         </select>
                     </div>
                 </div>
-                <div class="status-text">{{matchattendee}}</div>
+                <div class="status-text" ng-class="{'red': selectedItem.type == 'KATILMIYORUM'}">{{selectedItem.type}}</div>
                 <img src="assets/images/triangle.png" alt="">
             </div>
+        </div>
+    </div>
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
+        <!-- Modal content -->
+        <div class="modal-content">
+            <span class="close" ng-click="close()">&times;</span>
+            <p>{{matchattendee}}</p>
         </div>
     </div>
