--- a/src/main/main.html
+++ b/src/main/main.html
@@ -18,7 +18,7 @@
             <div id="user">
                 <img src="assets/images/user_pic.png" alt="">
                 <h1>{{firstname}}</h1>
-                <span>ART DIRECTOR, TASARIM</span>
+                <span>{{position}}</span>
             </div>
             <div id="content">
                 <div class="col-xs-12 text">
