--- a/src/join/join.html
+++ b/src/join/join.html
@@ -7,6 +7,7 @@
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <a ng-click="Login()">Anasayfa</a>
             <a ng-click="Main()">Maça Katılanlar</a>
+            <a ng-click="Cash()">Kasa</a>
             <a ng-click="LogOut()">Logout</a>
         </div>
         <div class="menubutton" onclick="openNav()"><img src="assets/images/menubutton.png">
