--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="assets/js/angular.js"></script>
     <script src="assets/js/angular-route.js"></script>
     <script src="assets/js/ngStorage.min.js"></script>
+    <script src="assets/js/angular-cookies.min.js"></script>
     <script src="src/config.js"></script>
 
 </html>
