--- a/src/join/join.html
+++ b/src/join/join.html
@@ -7,7 +7,8 @@
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <a ng-click="Login()">Anasayfa</a>
             <a ng-click="Main()">Maça Katılanlar</a>
-            <a ng-click="Cash()">Kasa</a>
+            <a ng-click="Cash()" ng-show="isAdmin">Kasa</a>
+            <a ng-click="Debt()">Borç Harç</a>
             <a ng-click="LogOut()">Logout</a>
         </div>
         <div class="menubutton" onclick="openNav()"><img src="assets/images/menubutton.png">
