--- a/src/cash/cash.html
+++ b/src/cash/cash.html
@@ -45,9 +45,9 @@
                         <td>
                             <div ng-click="payButton(attendance.UserName)">{{attendance.UserName}}</div>
                         </td>
-                        <td>{{personAmount}}</td>
-                        <td style="color: #42fd4a">0</td>
-                        <td style="color: #ff1b1b">0</td>
+                        <td>{{personAmount}} TL</td>
+                        <td style="color: #42fd4a">0 TL</td>
+                        <td style="color: #ff1b1b">0 TL</td>
                 </tbody>
                 <tbody>
                     <tr ng-repeat="attendance in attendanceList.ResultList | filter : IsAttending = true | filter : IsPaying = false">
