--- a/src/cash/cash.html
+++ b/src/cash/cash.html
@@ -20,46 +20,48 @@
             <h1 class="underline">Kasa</h1>
         </div>
         <div id="list">
-            <div class="row" style="margin: 0 -5px;">
-                <div class="col-xs-6" style="padding: 0 5px;">
-                    <input type="number" id="" ng-model="person" style="color: #000; width: 100%; padding: 5px 10px;" placeholder="Kişi Başı Toplam">
+            <div class="text" style="padding: 0;">
+                <div class="row" style="margin: 0 -5px;">
+                    <div class="col-xs-6" style="padding: 0 5px;">
+                        <input type="number" id="" ng-model="person" style="color: #000; width: 100%; padding: 5px 10px;" placeholder="Kişi Başı Toplam">
+                    </div>
+                    <div class="col-xs-6" style="padding: 0 5px;">
+                        <input type="number" id="" ng-model="all" style="color: #000; width: 100%; padding: 5px 10px;" placeholder="Sahaya Verilecek">
+                    </div>
+                    <div class="col-xs-12" style="padding: 0 5px;">
+                        <button class="btn btn-success" ng-click="approve()" style="width: 100%; margin-top: 5px;">ONAYLA</button>
+                    </div>
                 </div>
-                <div class="col-xs-6" style="padding: 0 5px;">
-                    <input type="number" id="" ng-model="all" style="color: #000; width: 100%; padding: 5px 10px;" placeholder="Sahaya Verilecek">
-                </div>
-                <div class="col-xs-12" style="padding: 0 5px;">
-                    <button class="btn btn-success" ng-click="approve()" style="width: 100%; margin-top: 5px;">ONAYLA</button>
-                </div>
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Katılanlar</th>
+                            <th>T.P.</th>
+                            <th>V.P.</th>
+                            <th>T.B.</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr ng-repeat="attendance in attendanceList.ResultList | filter : IsAttending = true">
+                            <td>
+                                <div ng-click="payButton(attendance.UserName)">{{attendance.UserName}}</div>
+                            </td>
+                            <td>{{personAmount}} TL</td>
+                            <td style="color: #42fd4a">0 TL</td>
+                            <td style="color: #ff1b1b">0 TL</td>
+                    </tbody>
+                    <tbody>
+                        <tr ng-repeat="attendance in attendanceList.ResultList | filter : IsAttending = true | filter : IsPaying = false">
+                            <td>
+                                <div ng-click="payButton()">{{attendance.UserName}}</div>
+                            </td>
+                            <td>20</td>
+                            <td style="color: #42fd4a">0</td>
+                            <td style="color: #ff1b1b">0</td>
+                    </tbody>
+                </table>
+                <h3>TOPLAM: <span style="color: #42fd4a">0</span></h3>
             </div>
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th>Katılanlar</th>
-                        <th>T.P.</th>
-                        <th>V.P.</th>
-                        <th>T.B.</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr ng-repeat="attendance in attendanceList.ResultList | filter : IsAttending = true">
-                        <td>
-                            <div ng-click="payButton(attendance.UserName)">{{attendance.UserName}}</div>
-                        </td>
-                        <td>{{personAmount}} TL</td>
-                        <td style="color: #42fd4a">0 TL</td>
-                        <td style="color: #ff1b1b">0 TL</td>
-                </tbody>
-                <tbody>
-                    <tr ng-repeat="attendance in attendanceList.ResultList | filter : IsAttending = true | filter : IsPaying = false">
-                        <td>
-                            <div ng-click="payButton()">{{attendance.UserName}}</div>
-                        </td>
-                        <td>20</td>
-                        <td style="color: #42fd4a">0</td>
-                        <td style="color: #ff1b1b">0</td>
-                </tbody>
-            </table>
-            <h3>TOPLAM: <span style="color: #42fd4a">0</span></h3>
         </div>
     </div>
     <!-- The Modal -->
