--- a/src/cash/cash.html
+++ b/src/cash/cash.html
@@ -39,7 +39,7 @@
                             <th>Katılanlar</th>
                             <th>T.P.</th>
                             <th>V.P.</th>
-                            <th>T.B.</th>
+                            <th>Bak.</th>
                         </tr>
                     </thead>
                     <tbody>
