--- a/src/debt/debt.html
+++ b/src/debt/debt.html
@@ -25,15 +25,13 @@
                     <thead>
                         <tr>
                             <th>Oyuncular</th>
-                            <th>Alacak</th>
-                            <th>Verecek</th>
+                            <th>Bakiye</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr ng-repeat="attendance in attendanceList.ResultList">
                             <td>{{attendance.UserName}}</td>
                             <td style="color: #42fd4a">0 TL</td>
-                            <td style="color: #ff1b1b">0 TL</td>
                     </tbody>
                 </table>
             </div>
