--- a/src/cash/cash.html
+++ b/src/cash/cash.html
@@ -20,19 +20,18 @@
             <h1 class="underline">Kasa</h1>
         </div>
         <div id="list">
-            <div class="text" style="padding: 0;">
-                <div class="row" style="margin: 0;">
+            <div class="row" style="margin: 0;">
                     <div class="col-xs-6" style="padding: 0 5px;">
-                        <input type="number" id="" ng-model="person" style="color: #000; width: 100%; padding: 5px 10px;" placeholder="Kişi Başı Toplam">
+                        <input type="number" id="" ng-model="person" style="color: #000; width: 100%; padding: 10px;" placeholder="Kişi Başı Toplam">
                     </div>
                     <div class="col-xs-6" style="padding: 0 5px;">
-                        <input type="number" id="" ng-model="all" style="color: #000; width: 100%; padding: 5px 10px;" placeholder="Sahaya Verilecek">
+                        <input type="number" id="" ng-model="all" style="color: #000; width: 100%; padding: 10px;" placeholder="Sahaya Verilecek">
                     </div>
                     <div class="col-xs-12" style="padding: 0 5px;">
-                        <button class="btn btn-success" ng-click="approve()" style="width: 100%; margin-top: 5px;">ONAYLA</button>
+                        <button class="btn btn-success" ng-click="approve()" style="width: 100%; margin-top: 5px; height: 44px;">ONAYLA</button>
                     </div>
                 </div>
-
+            <div class="text" style="padding: 0; height: 50vh; margin-top: 10px;">
                 <table class="table">
                     <thead>
                         <tr>
@@ -53,7 +52,7 @@
                     </tbody>
                     
                 </table>
-                <h3>TOPLAM: <span style="color: #42fd4a">0</span></h3>
+                <h3 style="position: fixed; bottom: 0; width: 100%; margin: 0; left: 0; padding: 10px 20px;">TOPLAM: <span style="color: #42fd4a">{{total}} TL</span></h3>
             </div>
         </div>
     </div>
@@ -62,9 +61,10 @@
         <!-- Modal content -->
         <div class="modal-content">
             <span class="close" ng-click="close()">&times;</span>
+            <h4>Tutar Giriniz</h4>
             <div class="amount-form">
                 <input type="number" id="{{payUserId}}" class="amount-input" ng-model="payUser">
-                <button class="btn btn-success" ng-click="userAmount(payUserId)">ALINDI</button>
+                <button class="btn btn-success" ng-click="userAmount(payUserId)" ng-disabled="payUser == ''">ALINDI</button>
             </div>
         </div>
     </div>
