--- a/src/cash/cash.html
+++ b/src/cash/cash.html
@@ -52,7 +52,9 @@
                     </tbody>
                 </table>
             </div>
-            <h3 style="position: fixed; bottom: 0; width: 100%; margin: 0; left: 0; padding: 10px 20px;">TOPLAM: <span style="color: #42fd4a">{{total}} TL</span></h3>
+            <div class="total" style="position: fixed; bottom: 0; width: 100%; margin: 0; left: 0; padding: 10px 20px; z-index: 99;">
+                <h3 style="margin: 0;">TOPLAM: <span style="color: #42fd4a">{{total}} TL</span></h3>
+            </div>
         </div>
     </div>
     <!-- The Modal -->
