--- a/index.html
+++ b/index.html
@@ -17,5 +17,10 @@
     <script src="assets/js/ngStorage.min.js"></script>
     <script src="assets/js/angular-cookies.min.js"></script>
     <script src="src/config.js"></script>
+    <script src="src/login/login.js"></script>
+    <script src="src/main/main.js"></script>
+    <script src="src/join/join.js"></script>
+    <script src="src/cash/cash.js"></script>
+    <script src="src/debt/debt.js"></script>
 
 </html>
