--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="assets/js/ngStorage.min.js"></script>
     <script src="assets/js/angular-cookies.min.js"></script>
     <script src="src/config.js"></script>
+    <script src="src/_inc/nav.js"></script>
     <script src="src/login/login.js"></script>
     <script src="src/main/main.js"></script>
     <script src="src/join/join.js"></script>
