--- a/src/cash/cash.html
+++ b/src/cash/cash.html
@@ -3,16 +3,7 @@
         <img src="assets/images/main_bg.jpg" width="100%">
     </div>
     <div class="container">
-        <div id="mySidenav" class="sidenav">
-            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            <a ng-click="Login()">Anasayfa</a>
-            <a ng-click="Main()">Maça Katılanlar</a>
-            <a ng-click="Cash()" ng-show="isAdmin">Kasa</a>
-            <a ng-click="Debt()">Borç Harç</a>
-            <a ng-click="LogOut()">Logout</a>
-        </div>
-        <div class="menubutton" onclick="openNav()"><img src="assets/images/menubutton.png">
-        </div>
+        <div ng-include="'src/_inc/nav.html'"></div>
         <div id="logo-main">
             <img src="assets/images/logo_white.png" alt="">
         </div>
@@ -22,13 +13,13 @@
         <div id="list">
             <div class="row" style="margin: 0;">
                 <div class="col-xs-6" style="padding: 0 5px;">
-                    <input type="number" pattern="[0-9]*" ng-model="person" style="color: #000; width: 100%; padding: 10px;" placeholder="Kişi Başı Toplam">
+                    <input type="number" pattern="[0-9]*" ng-model="person" placeholder="Kişi Başı Toplam">
                 </div>
                 <div class="col-xs-6" style="padding: 0 5px;">
-                    <input type="number" pattern="[0-9]*" ng-model="all" style="color: #000; width: 100%; padding: 10px;" placeholder="Sahaya Verilecek">
+                    <input type="number" pattern="[0-9]*" ng-model="all" placeholder="Sahaya Verilecek">
                 </div>
                 <div class="col-xs-12" style="padding: 0 5px;">
-                    <button class="btn btn-success" ng-click="approve()" style="width: 100%; margin-top: 5px; height: 44px;">ONAYLA</button>
+                    <button class="btn btn-success" ng-click="approve()">ONAYLA</button>
                 </div>
             </div>
             <div class="text" style="padding: 0; height: 50vh; margin-top: 10px;">
