--- a/src/_inc/nav.html
+++ b/src/_inc/nav.html
@@ -1,5 +1,5 @@
 <div ng-controller="NavController">
-    <div id="mySidenav" class="sidenav" >
+    <div id="mySidenav" class="sidenav {{openClass}}" >
         <a href="javascript:void(0)" class="closebtn" ng-click="closeNav()">&times;</a>
         <a ng-click="Login()">Anasayfa</a>
         <a ng-click="Main()">Maça Katılanlar</a>
