--- a/src/main/main.html
+++ b/src/main/main.html
@@ -1,4 +1,4 @@
-<div ng-include="'src/_inc/nav.html'"></div>
+<div ng-include="'src/nav/nav.html'"></div>
 <div ng-controller="MainController">
     <div id="image">
         <img src="assets/images/main_bg.jpg" width="100%">
