--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="src/login/login.js"></script>
     <script src="src/main/main.js"></script>
     <script src="src/join/join.js"></script>
+    <script src="src/past/past.js"></script>
     <script src="src/cash/cash.js"></script>
     <script src="src/debt/debt.js"></script>
 
