--- a/src/nav/nav.html
+++ b/src/nav/nav.html
@@ -3,6 +3,7 @@
         <a href="javascript:void(0)" class="closebtn" ng-click="closeNav()">&times;</a>
         <a ng-click="Login()">Anasayfa</a>
         <a ng-click="Main()">Maça Katılanlar</a>
+        <a ng-click="Past()">Geçmiş Maçlar</a>
         <a ng-click="Cash()" ng-show="isAdmin">Kasa</a>
         <a ng-click="Debt()">Borç Harç</a>
         <a ng-click="LogOut()">Logout</a>
