--- a/src/past/past.html
+++ b/src/past/past.html
@@ -22,7 +22,7 @@
                     </select>
                 </div>
             </div>
-            <div class="col-xs-12 text" style="padding: 0 0 0 25px; height: 65vh;">
+            <div class="col-xs-12 text" style="padding: 0 5px 0 28px; height: 65vh;">
                 <ul>
                     <li ng-repeat="attendance in attendanceList.ResultList | filter : IsAttending = true">
                         {{attendance.UserName}}
